Update tests for resendActivationEmail api; Standardize text
